--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "vue-clickaway",
+  "name": "vue-clickaway2",
   "description": "Reusable clickaway directive for reusable Vue.js components",
   "version": "2.2.3",
   "author": "Denis Karabaza <denis.karabaza@gmail.com>",
+  "contributors": [
+    "Ciro DE CARO <decaro.ciro@gmail.com>"
+  ],
   "browserify": {
     "transform": [
       "loose-envify"
     ]
   },
   "bugs": {
-    "url": "https://github.com/simplesmiler/vue-clickaway/issues"
+    "url": "https://github.com/silverspectro/vue-clickaway2/issues"
   },
   "dependencies": {
     "loose-envify": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^1.10.3",
+    "eslint": "^5.3.0",
     "mkdirp": "^0.5.1",
     "rollup": "^0.21.2",
     "rollup-plugin-replace": "^1.1.0",
     "uglify-js": "^2.6.1"
   },
-  "homepage": "https://github.com/simplesmiler/vue-clickaway",
+  "homepage": "https://github.com/silverspectro/vue-clickaway2",
   "keywords": [
     "click",
     "clickaway",
@@ -37,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/simplesmiler/vue-clickaway"
+    "url": "https://github.com/silverspectro/vue-clickaway2"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint index.js directive.js mixin.js build.js",
